// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthRestakeErc20Vault deposit emits transfer event 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 70746,
}
`;

exports[`EthRestakeErc20Vault enter exit queue emits transfer event 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 90996,
}
`;
